--- a/simple_data_manipulation.ipynb
+++ b/simple_data_manipulation.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ebce1144",
+   "metadata": {},
+   "source": [
+    "### Loading a data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9086ec67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '####' # provide path the file/data, NB: all '\\' must be changed to '/'\n",
+    "\n",
+    "data = pd.read_csv(file_path,\n",
+    "                  index_col = col_name # column to be used as the dataframe index\n",
+    "                  ) # import a .csv file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5021a446",
    "metadata": {},
    "source": [
