--- a/simple_data_manipulation.ipynb
+++ b/simple_data_manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ebce1144",
+   "id": "ada12286",
    "metadata": {},
    "source": [
     "### Loading a data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9086ec67",
+   "id": "e1bb1581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
    "id": "c7354267",
    "metadata": {},
    "source": [
-    "#### Dataframe transformation"
+    "#### Dataframe / Array transformation"
    ]
   },
   {
@@ -215,6 +215,15 @@
     "\n",
     "data.isnull().sum() # find count of missing values for all columns in a dataframe\n",
     "\n",
+    "data.T # transpose a/an matrix/vector/array\n",
+    "\n",
+    "np.dot(a,b) # find the dot product of matrix/vector 'a' and 'b'\n",
+    "\n",
+    "np.delete(numpy_array_name, # name of numpy array\n",
+    "          rem, # list of indices to be removed\n",
+    "          axis=0 # specify for row/column, NB: '0' for row\n",
+    "         )\n",
+    "\n",
     "# get the 'a'th % percentile of a numeric column\n",
     "col_name = '####' # column name\n",
     "a = '####' # required percentile\n",
@@ -231,6 +240,8 @@
     "np.absolute(data) # get the absolute value of teh data\n",
     "\n",
     "data.shape # check the dimensions of a dataframe\n",
+    "\n",
+    "data.reshape(a,b) # change the dimension of a vector, NB: 'a' and 'b' are integers\n",
     "\n",
     "data.columns.values # return the column names of a dataframe in an array\n",
     "\n",
@@ -274,7 +285,11 @@
     "data = '####' # dataframe with categorical variables\n",
     "pd.get_dummies(data,\n",
     "               drop_first=True # do not create a dummy column for first value in a categorical column\n",
-    "              )"
+    "              )\n",
+    "\n",
+    "\n",
+    "# combines two matrices (vectors) into one\n",
+    "np.column_stack((a,b)) # combine matrix 'a' and 'b' to form a single matrix"
    ]
   },
   {
