--- a/simple_data_manipulation.ipynb
+++ b/simple_data_manipulation.ipynb
@@ -5,7 +5,7 @@
    "id": "ada12286",
    "metadata": {},
    "source": [
-    "### Loading a data"
+    "### Loading/Exporting a data"
    ]
   },
   {
@@ -15,11 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '####' # provide path the file/data, NB: all '\\' must be changed to '/'\n",
+    "file_path = '####/file_name.csv' # provide path the file/data, NB: all '\\' must be changed to '/'\n",
     "\n",
     "data = pd.read_csv(file_path,\n",
     "                  index_col = col_name # column to be used as the dataframe index\n",
-    "                  ) # import a .csv file"
+    "                  ) # import a .csv file\n",
+    "\n",
+    "data_dataframe.to_csv(file_path, \n",
+    "                      index=False # store into a *.csv file (without an index column)\n",
+    "                     ) # export a file to csv"
    ]
   },
   {
@@ -186,6 +190,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b97400dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(condition,value if true,value if false) # conditional statement using where clause"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c7354267",
    "metadata": {},
@@ -200,16 +214,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.options.display.max.rows = n # Display 'n' number of rows from an output\n",
+    "pd.options.display.max_rows = n # Display 'n' number of rows from an output, NB: 'none' to display all rows\n",
+    "pd.options.display.max_columns = n # Display 'n' number of columns from an output, NB: 'none' to display all columns\n",
     "\n",
     "pd.set_option('display.float_format', lambda x: '%.2f' % x) # display all floats in 2 decimal places in dataframes\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{0:0.2f}\".format(x)}) # display all floats in 2 decimal places in arrayw\n",
     "\n",
     "data.head(n) # see the first n rows of a dataframe\n",
     "\n",
+    "data.info() # gives a concise summary of the dataframe 'data'\n",
+    "\n",
     "# Sort values by specified column\n",
     "col_name = '####' # column to be sorted by\n",
-    "data.sort_values(by=[col_name])\n",
+    "data.sort_values(by=[col_name], ascending=False)\n",
+    "\n",
+    "data.sort_index() # sort datafram index aphabetically/numerically\n",
+    "\n",
+    "new_data = pd.concat(col_or_dat_frame1, col_or_dat_frame2], axis=1) # join/concatenate 2 columns/dataframes/list to form a single dataframe\n",
     "\n",
     "data.isnull() # find missing values in a dataframe\n",
     "\n",
@@ -228,6 +249,8 @@
     "col_name = '####' # column name\n",
     "a = '####' # required percentile\n",
     "data[col_name].quantile(a)\n",
+    "\n",
+    "dataframe[col].value_counts() # gives the count of the distinct values in col in a dataframe\n",
     "\n",
     "# get the natural log transformation of a column\n",
     "col_name = '####' # column name\n",
@@ -289,7 +312,15 @@
     "\n",
     "\n",
     "# combines two matrices (vectors) into one\n",
-    "np.column_stack((a,b)) # combine matrix 'a' and 'b' to form a single matrix"
+    "np.column_stack((a,b)) # combine matrix 'a' and 'b' to form a single matrix\n",
+    "\n",
+    "\n",
+    "# Apply function to all rows of a dataframe\n",
+    "function = '####' # manually created function\n",
+    "df_or_list.apply(function) # apply function to every row/index of the datafrale/list\n",
+    "\n",
+    "\n",
+    "col_list.median() # find the median of a group of numbers in a list/col/tuple"
    ]
   },
   {
