--- a/simple_data_manipulation.ipynb
+++ b/simple_data_manipulation.ipynb
@@ -320,7 +320,15 @@
     "df_or_list.apply(function) # apply function to every row/index of the datafrale/list\n",
     "\n",
     "\n",
-    "col_list.median() # find the median of a group of numbers in a list/col/tuple"
+    "col_list.median() # find the median of a group of numbers in a list/col/tuple\n",
+    "\n",
+    "dataframe_column.idxmax() # Give the index of the largest number in a dataframe column\n",
+    "\n",
+    "dataframe_column.idxmin() # Give the index of the smallest number in a dataframe column\n",
+    "\n",
+    "data.nunique() # Gives the number of unique elements in a data\n",
+    "\n",
+    "data.unique() # Gives the unique elements in a data in order as they appear"
    ]
   },
   {
